# mejiro

./: .gitignore  Cargo.toml  README.md  typos.toml
.github/workflows/: lint.yml  release.yml
config/: Cargo.toml
config/src/: lib.rs  owner.rs  styles.rs
docs/: DEV.md  image-management.md
html/: Cargo.toml
html/src/: aside.rs  code_block.rs  footer.rs  icon.rs  index.rs  lib.rs  metadata.rs  post.rs
install/: install.sh
mejiro-cli/: Cargo.toml
mejiro-cli/assets/: mejiro_search.js  style.css
mejiro-cli/assets/mejiro-search-pkg/: mejiro_search.js  mejiro_search_bg.wasm
mejiro-cli/src/: compile.rs  image.rs  lib.rs  list.rs  main.rs  new.rs  posts_json.rs
search/: Cargo.toml  Taskfile.yml
search/src/: base_search.rs  lib.rs  word_search.rs
