[package]
name = "mejiro-cli"
version = "0.1.1"
edition = "2024"
description = "A CLI tool for Mejiro"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsugumi-sys/mejiro" 
readme = "README.md" 
keywords = ["cli", "mejiro", "tool", "blog"]
categories = ["command-line-utilities"]


[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
config = { path = "../config" }
html = { path = "../html" }
rand = "0.9.1"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
