[package]
name = "search"
version = "0.1.0"
description = "A WASM search for blog posts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsugumi-sys/mejiro" 
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
